Restore work section to original state with complete project files

--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -1,10 +1,11 @@
 ---
 title: "Automating Design Handovers with a Figma to Code Pipeline"
 publishedAt: "2024-04-01"
-summary: "Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think."
+summary: "A comprehensive solution for automating the design-to-code handoff process, reducing development time by 40% while maintaining design consistency."
 images:
+  - "/images/projects/project-01/cover-01.jpg"
   - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/image-03.jpg"
+  - "/images/projects/project-01/cover-03.jpg"
 team:
   - name: "John Doe"
     role: "Software Engineer"
@@ -38,7 +39,3 @@ One of the biggest challenges was ensuring that the generated code was clean and
 ## Outcome
 
 The automated Figma to code pipeline has streamlined the handoff process, cutting down design-to-development time by 40%. Designers now have more confidence that their designs will be accurately translated into code, and developers can focus on more complex logic and feature development. This project has proven the value of automation in bridging the gap between design and development.
-
----
-
-This project demonstrates your ability to leverage automation and streamline workflows, which is highly relevant for design engineering portfolios focused on efficiency and innovation.
