--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,7 +1,42 @@
 ---
-title: "Once UI: Open-source design system"
-publishedAt: "2024-04-08"
+title: "Simple Portfolio Builder"
+publishedAt: "2024-04-15"
+summary: "A modern, responsive portfolio builder that allows users to create stunning personal websites with ease."
 images:
   - "/images/projects/project-01/cover-04.jpg"
   - "/images/projects/project-01/video-01.mp4"
+team:
+  - name: "Alex Johnson"
+    role: "Full Stack Developer"
+    avatar: "/images/avatar.jpg"
+    linkedIn: "https://www.linkedin.com/company/once-ui/"
+link: "https://portfolio-builder.com/"
 ---
+
+## Overview
+
+Simple Portfolio Builder is a modern web application that enables users to create professional portfolios without any coding knowledge. Built with Next.js and featuring a drag-and-drop interface, it provides a seamless experience for users to showcase their work and skills.
+
+## Key Features
+
+- **Drag-and-Drop Interface**: Intuitive drag-and-drop functionality that allows users to easily arrange and customize their portfolio sections.
+- **Responsive Design**: Automatically adapts to different screen sizes, ensuring portfolios look great on desktop, tablet, and mobile devices.
+- **Template Library**: A collection of professionally designed templates that users can choose from and customize to match their personal brand.
+- **Real-time Preview**: Live preview functionality that shows changes instantly as users make modifications to their portfolio.
+- **Export Options**: Multiple export formats including static HTML, PDF, and direct deployment to popular hosting platforms.
+
+## Technologies Used
+
+- **Next.js**: For building a fast, SEO-friendly React application with server-side rendering.
+- **React DnD**: For implementing the drag-and-drop functionality.
+- **Tailwind CSS**: For styling with a utility-first approach and responsive design.
+- **Framer Motion**: For smooth animations and transitions throughout the application.
+- **Vercel**: For deployment and hosting with automatic CI/CD pipeline.
+
+## Challenges and Learnings
+
+The biggest challenge was creating an intuitive drag-and-drop interface that worked seamlessly across different devices and browsers. This required careful consideration of touch events, accessibility, and performance optimization. Additionally, implementing real-time preview while maintaining good performance was a learning experience in state management and optimization techniques.
+
+## Outcome
+
+Simple Portfolio Builder has helped hundreds of users create professional portfolios quickly and easily. The platform has received positive feedback for its ease of use and the quality of portfolios it produces. This project demonstrated the importance of user experience design and the value of creating tools that make complex tasks simple for end users.
